syntax = "proto3";

package form_credit.service;

option csharp_namespace = "Parstech.Shop.Shared.Protos.FormCredit";

service FormCreditService {
  rpc CreateFormCredit (CreateFormCreditRequest) returns (FormCreditResponse) {}
  rpc GetFormCredit (GetFormCreditRequest) returns (FormCreditDto) {}
  rpc GetFormCredits (GetFormCreditsRequest) returns (FormCreditsResponse) {}
  rpc GetPagedFormCredits (GetPagedFormCreditsRequest) returns (PagedFormCreditsResponse) {}
  rpc ChangeFormCreditStatus (ChangeFormCreditStatusRequest) returns (FormCreditResponse) {}
}

message CreateFormCreditRequest {
  FormCreditDto form_credit = 1;
}

message GetFormCreditRequest {
  int32 id = 1;
}

message GetFormCreditsRequest {
  string filter = 1;
  string from_date = 2;
  string to_date = 3;
}

message GetPagedFormCreditsRequest {
  int32 skip = 1;
  int32 take = 2;
  string filter = 3;
  string from_date = 4;
  string to_date = 5;
}

message ChangeFormCreditStatusRequest {
  int32 id = 1;
  string type = 2;
}

message FormCreditDto {
  int32 id = 1;
  string name = 2;
  string family = 3;
  string personal_code = 4;
  string international_code = 5;
  string mobile = 6;
  string state = 7;
  int64 request_price = 8;
  string text_request_price = 9;
  string create_date = 10;
  string create_date_shmai = 11;
  string status = 12;
}

message FormCreditsResponse {
  repeated FormCreditDto form_credits = 1;
}

message PagedFormCreditsResponse {
  repeated FormCreditDto form_credits = 1;
  int32 total_count = 2;
  int32 page_count = 3;
}

message FormCreditResponse {
  bool is_success = 1;
  string message = 2;
  FormCreditDto form_credit = 3;
  repeated ErrorDetail errors = 4;
}

message ErrorDetail {
  string property_name = 1;
  string error_message = 2;
} 